# rig-claude-advanced

./: Cargo.toml
src/: lib.rs  model.rs  request.rs  tool_search.rs  types.rs
