[package]
name = "rig-claude-advanced"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Anthropic advanced tool use features for Rig: tool examples, cache control, and deferred tool loading."
repository = "https://github.com/0xPlaygrounds/rig"
rust-version = "1.85"

[dependencies]
rig-core = { version = "0.31.0", default-features = false }
async-stream = "0.3"
bytes = "1"
futures = "0.3"
http = "1"
nanoid = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "charset", "http2"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
